--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.14",
     "bcryptjs": "^3.0.2",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
@@ -25,6 +24,9 @@
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "@tailwindcss/vite": "^4.1.4",
+    "autoprefixer": "^10.4.21",
+    "nodemon": "^3.1.9",
+    "tailwindcss": "^4.1.4"
   }
 }
